--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   "bugs": {
     "url": "https://github.com/folktale/data.either/issues"
   },
-  "dependencies": {},
+  "dependencies": {
+    "claire": "~0.4.1"
+  },
   "devDependencies": {
     "browserify": "git://github.com/robotlolita/node-browserify",
     "groc": "git://github.com/robotlolita/groc#typography",
